--- a/style/layout.css
+++ b/style/layout.css
@@ -215,6 +215,220 @@
   width: 100%;
 }
 
+.popular {
+  padding-bottom: 75px;
+}
+
+.popular h2 {
+  padding-top: 50px;
+}
+
+.popular p {
+  opacity: 0.5;
+}
+
+.popular .content {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  margin-top: 50px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.popular .content:hover {
+  margin-top: 20px;
+}
+
+.popular .content img {
+  width: 100%;
+}
+
+.popular .content .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(14, 161, 149, 0.4);
+  text-align: left;
+}
+
+.popular .content .overlay h4 {
+  margin-top: 50%;
+  margin-left: 15px;
+  color: #fff;
+  font-size: 20px;
+}
+
+.popular .content .overlay p {
+  opacity: 1;
+  margin-left: 15px;
+  font-weight: bold;
+  color: #ddd;
+  opacity: 1;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+.full .col-md-6 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.full .col-md-6 .img {
+  background: url("../imgs/img3.jpg") no-repeat center center;
+  background-size: cover;
+  height: 550px;
+}
+
+.full .col-md-6 .img2 {
+  background: url("../imgs/img4.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.full .col-md-6 .content2 {
+  background-color: #fff !important;
+}
+
+.full .col-md-6 .content {
+  height: 550px;
+  background-color: #f5f5f5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.full .col-md-6 .content .con {
+  width: 70%;
+}
+
+.full .col-md-6 .content .con h3 {
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.full .col-md-6 .content .con .lead {
+  opacity: 0.7;
+  font-style: italic;
+}
+
+.full .col-md-6 .content .con .explain {
+  margin-bottom: 20px;
+}
+
+.full .col-md-6 .content .con .option {
+  width: 31%;
+  text-align: center;
+  border: 1px solid #0ea195;
+  border-radius: 30px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.full .col-md-6 .content .con .option:hover {
+  background-color: #0ea195;
+  border: 1px solid #0ea195;
+}
+
+.full .col-md-6 .content .con .option .btn {
+  color: #0ea195;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.full .col-md-6 .content .con .option .btn:hover {
+  color: #fff;
+}
+
+.Request {
+  background: url("../imgs/img5.jpg") no-repeat center center fixed;
+  background-size: cover;
+  position: relative;
+  height: 240px;
+}
+
+.Request .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(14, 161, 149, 0.5);
+}
+
+.Request .overlay h2 {
+  padding-top: 75px;
+  color: #fff;
+}
+
+.Request .overlay p {
+  color: white;
+  opacity: 0.7;
+  font-style: italic;
+}
+
+.Request .overlay .option {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 106%;
+  border: 1px solid #fff;
+  border-radius: 30px;
+  display: inline-block;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.Request .overlay .option:hover {
+  background-color: #ff9838;
+  border: 1px solid #ff9838;
+}
+
+.Request .overlay .option .btn {
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 10px 20px;
+}
+
+.Upcoming {
+  height: 1000px;
+}
+
+.Upcoming h2 {
+  margin-top: 50px;
+}
+
+.Upcoming p {
+  opacity: 0.7;
+  margin-bottom: 55px;
+}
+
+.Upcoming .card {
+  cursor: pointer;
+  margin: 0 auto 25px;
+}
+
+.Upcoming .card:hover {
+  -webkit-box-shadow: 10px 10px 10px rgba(127, 127, 204, 0.52), -10px -10px 10px rgba(127, 127, 204, 0.52);
+          box-shadow: 10px 10px 10px rgba(127, 127, 204, 0.52), -10px -10px 10px rgba(127, 127, 204, 0.52);
+}
+
+.Upcoming .card .card-text {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
 @media (min-width: 320px) {
   .bg-light {
     background-color: #0ea195 !important;
@@ -286,6 +500,95 @@
   }
   .university img {
     margin-top: 0 !important;
+  }
+}
+
+@media (min-width: 320px) {
+  .full .img {
+    height: 300px !important;
+  }
+  .full .content {
+    height: 400px !important;
+  }
+  .full .content .con {
+    text-align: center;
+    width: 100% !important;
+    padding: 30px !important;
+  }
+  .full .content .con .option {
+    margin: 0 34.5%;
+  }
+}
+
+@media (min-width: 576px) {
+  .full .img {
+    height: 550px !important;
+  }
+  .full .content {
+    height: 550px !important;
+  }
+  .full .content .con {
+    text-align: center;
+    width: 100% !important;
+    padding: 30px !important;
+  }
+  .full .content .con .option {
+    margin: 0 34.5%;
+  }
+}
+
+@media (min-width: 992px) {
+  .full .img {
+    height: 550px !important;
+  }
+  .full .content {
+    height: 550px !important;
+  }
+  .full .content .con {
+    text-align: left;
+    width: 70% !important;
+    padding: 30px !important;
+  }
+  .full .content .con .option {
+    margin: 0 34.5%;
+  }
+}
+
+@media (min-width: 320px) {
+  .Request {
+    height: 360px !important;
+    text-align: center !important;
+  }
+  .Request .overlay .option {
+    margin-top: 0px !important;
+    margin-bottom: 25px !important;
+    width: 100% !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .Request {
+    height: 240px !important;
+    text-align: left !important;
+  }
+  .Request .overlay .option {
+    text-align: center;
+    margin-top: 100px !important;
+    margin-bottom: 25px !important;
+    width: 113% !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .Request {
+    height: 240px !important;
+    text-align: left !important;
+  }
+  .Request .overlay .option {
+    text-align: center;
+    margin-top: 100px !important;
+    margin-bottom: 25px !important;
+    width: 106% !important;
   }
 }
 /*# sourceMappingURL=layout.css.map */
