--- a/style/layout.css
+++ b/style/layout.css
@@ -98,6 +98,10 @@
   color: #fff;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .main {
   background: url("../imgs/study.jpg") no-repeat center center;
   background-size: cover;
@@ -532,6 +536,9 @@ body {
     width: 100% !important;
     padding: 30px !important;
   }
+  .full .content .con .explain {
+    font-size: 14px !important;
+  }
   .full .content .con .option {
     margin: 0 34.5%;
   }
@@ -548,6 +555,9 @@ body {
     text-align: left;
     width: 70% !important;
     padding: 30px !important;
+  }
+  .full .content .con .explain {
+    font-size: 17px;
   }
   .full .content .con .option {
     margin: 0 34.5%;
