--- a/style/layout.css
+++ b/style/layout.css
@@ -103,6 +103,7 @@ body {
 }
 
 .main {
+  width: 101%;
   background: url("../imgs/study.jpg") no-repeat center center;
   background-size: cover;
   position: relative;
@@ -175,6 +176,7 @@ body {
 }
 
 .university {
+  width: 101%;
   background-color: #f5f5f5;
   margin-top: -115px;
   padding-top: 110px;
@@ -220,6 +222,7 @@ body {
 }
 
 .popular {
+  width: 101%;
   padding-bottom: 75px;
 }
 
@@ -355,6 +358,7 @@ body {
 }
 
 .Request {
+  width: 101%;
   background: url("../imgs/img5.jpg") no-repeat center center fixed;
   background-size: cover;
   position: relative;
@@ -406,6 +410,7 @@ body {
 }
 
 .Upcoming {
+  width: 101%;
   height: 1000px;
 }
 
@@ -536,6 +541,9 @@ body {
     width: 100% !important;
     padding: 30px !important;
   }
+  .full .content .con h3 {
+    font-size: 18px;
+  }
   .full .content .con .explain {
     font-size: 14px !important;
   }
@@ -555,6 +563,9 @@ body {
     text-align: left;
     width: 70% !important;
     padding: 30px !important;
+  }
+  .full .content .con h3 {
+    font-size: 28px;
   }
   .full .content .con .explain {
     font-size: 17px;
