--- a/style/layout.css
+++ b/style/layout.css
@@ -236,10 +236,6 @@
   transition: all 0.5s ease-in-out;
 }
 
-.popular .content:hover {
-  margin-top: 20px;
-}
-
 .popular .content img {
   width: 100%;
 }
@@ -269,6 +265,10 @@
   opacity: 1;
 }
 
+.full .row {
+  margin: 0;
+}
+
 .full .col-md-6 {
   padding-left: 0;
   padding-right: 0;
@@ -277,20 +277,28 @@
 .full .col-md-6 .img {
   background: url("../imgs/img3.jpg") no-repeat center center;
   background-size: cover;
-  height: 550px;
+  width: 100%;
+  height: 100%;
+}
+
+.full .col-md-6 img {
+  width: 100%;
 }
 
 .full .col-md-6 .img2 {
   background: url("../imgs/img4.jpg") no-repeat center center;
   background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .full .col-md-6 .content2 {
+  padding: 88px 20px;
   background-color: #fff !important;
 }
 
 .full .col-md-6 .content {
-  height: 550px;
+  padding: 88px 20px;
   background-color: #f5f5f5;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -500,16 +508,9 @@
 }
 
 @media (min-width: 320px) {
-  .full .img {
-    height: 300px !important;
-  }
-  .full .content {
-    height: 450px !important;
-  }
   .full .content .con {
     text-align: center;
     width: 100% !important;
-    padding: 30px !important;
   }
   .full .content .con .option {
     margin: 0 34.5%;
@@ -517,16 +518,9 @@
 }
 
 @media (min-width: 576px) {
-  .full .img {
-    height: 550px !important;
-  }
-  .full .content {
-    height: 550px !important;
-  }
   .full .content .con {
     text-align: center;
     width: 100% !important;
-    padding: 30px !important;
   }
   .full .content .con h3 {
     font-size: 15px;
@@ -540,16 +534,9 @@
 }
 
 @media (min-width: 992px) {
-  .full .img {
-    height: 550px !important;
-  }
-  .full .content {
-    height: 550px !important;
-  }
   .full .content .con {
     text-align: left;
     width: 70% !important;
-    padding: 30px !important;
   }
   .full .content .con h3 {
     font-size: 28px;
