--- a/style/layout.css
+++ b/style/layout.css
@@ -275,7 +275,7 @@
 }
 
 .full .col-md-6 .img {
-  background: url("../imgs/img3.jpg") no-repeat center center;
+  background: url("../imgs/img3.png") no-repeat center center;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -286,7 +286,7 @@
 }
 
 .full .col-md-6 .img2 {
-  background: url("../imgs/img4.jpg") no-repeat center center;
+  background: url("../imgs/img4.png") no-repeat center center;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -434,7 +434,7 @@
 }
 
 .testmonial {
-  background: url("../imgs/img8.jpg") no-repeat center center fixed;
+  background: url("../imgs/img8.png") no-repeat center center fixed;
   background-size: cover;
 }
 
